--- a/scss/common/_form-auto-complete.scss
+++ b/scss/common/_form-auto-complete.scss
@@ -1,27 +1,27 @@
 div {
   &.ac-wrap {
     align-items: center;
-    background-color: color-chooser($text-field-box-bg-dark, $text-field-box-bg-light);
+    background-color: color-chooser($text-field-bg-dark, $text-field-bg-light);
     border: $text-field-border-width solid color-chooser($text-field-border-color-dark, $text-field-border-color-light);
-    border-radius: $text-field-box-border-radius;
-    min-height: $text-field-box-height;
+    border-radius: $text-field-border-radius;
+    min-height: $text-field-height;
     min-width: $text-field-min-width;
-    padding: (($text-field-box-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2) $text-field-box-padding-x;
-    padding-right: ($text-field-box-padding-x - $spacer-xs);
+    padding: (($text-field-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2) $text-field-padding-x;
+    padding-right: ($text-field-padding-x - $spacer-xs);
 
     &:hover {
       border-width: ($text-field-border-width * 2);
-      padding: (($text-field-box-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2 - $text-field-border-width) ($text-field-box-padding-x - $text-field-border-width);
-      padding-right: ($text-field-box-padding-x - $spacer-xs - $text-field-border-width);
+      padding: (($text-field-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2 - $text-field-border-width) ($text-field-padding-x - $text-field-border-width);
+      padding-right: ($text-field-padding-x - $spacer-xs - $text-field-border-width);
     }
 
     .admin-controls & {
-      padding: (($text-field-box-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2) $text-field-box-padding-x;
-      padding-right: ($text-field-box-padding-x - $spacer-xs);
+      padding: (($text-field-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2) $text-field-padding-x;
+      padding-right: ($text-field-padding-x - $spacer-xs);
 
       &:hover {
-        padding: (($text-field-box-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2 - $text-field-border-width) ($text-field-box-padding-x - $text-field-border-width);
-        padding-right: ($text-field-box-padding-x - $spacer-xs - $text-field-border-width);
+        padding: (($text-field-height - $text-field-border-width * 2 - ($chip-height + $spacer-xs)) / 2 - $text-field-border-width) ($text-field-padding-x - $text-field-border-width);
+        padding-right: ($text-field-padding-x - $spacer-xs - $text-field-border-width);
       }
     }
 
