--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -279,6 +279,7 @@
 
       &:hover {
         border-color: color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
+        box-shadow: inset 0 0 0 $text-field-border-width color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
       }
 
       &.is-focused {
