--- a/scss/mixins/_text-field.scss
+++ b/scss/mixins/_text-field.scss
@@ -1,27 +1,25 @@
 @mixin text-field {
   background-clip: padding-box;
-  background-color: transparent;
-  background-image: none;
-  border: 0;
-  border-bottom: $text-field-border-width solid color-chooser($text-field-border-color-dark, $text-field-border-color-light);
-  border-radius: 0;
-  box-shadow: none;
-  color: inherit;
-  display: block;
+  background-color: color-chooser($text-field-bg-dark, $text-field-bg-light);
+  border: $text-field-border-width solid color-chooser($text-field-border-color-dark, $text-field-border-color-light);
+  border-radius: $text-field-border-radius;
   font-size: $text-field-font-size;
-  height: $text-field-height;
-  line-height: ($text-field-height - $text-field-padding-y * 2);
-  padding: $text-field-padding-y $text-field-padding-x ($text-field-padding-y - $text-field-border-width);
+  line-height: $text-field-line-height;
+  min-height: $text-field-height;
+  padding: $text-field-padding-y $text-field-padding-x;
+  transition-duration: $transition-duration;
+  transition-property: border-color, box-shadow;
+  transition-timing-function: $transition-timing-function;
   width: 100%;
 
   &:hover {
     border-color: color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
-    box-shadow: inset 0 ($text-field-border-width * -2) 0 ($text-field-border-width * -1) color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
+    box-shadow: inset 0 0 0 $text-field-border-width color-chooser($text-field-border-color-hover-dark, $text-field-border-color-hover-light);
   }
 
   &:focus {
     border-color: unquote('$tertiary');
-    box-shadow: inset 0 ($text-field-border-width * -2) 0 ($text-field-border-width * -1) unquote('$tertiary');
+    box-shadow: inset 0 0 0 $text-field-border-width unquote('$tertiary');
     outline: 0;
   }
 
@@ -32,12 +30,4 @@
     color: color-chooser($text-field-border-color-disabled-dark, $text-field-border-color-disabled-light);
     pointer-events: none;
   }
-}
-
-@mixin text-field-box {
-  background-color: color-chooser($text-field-box-bg-dark, $text-field-box-bg-light);
-  border-radius: $text-field-box-border-radius;
-  height: $text-field-box-height;
-  line-height: ($text-field-box-height - $text-field-box-padding-y * 2);
-  padding: $text-field-box-padding-y $text-field-box-padding-x ($text-field-box-padding-y - $text-field-border-width);
 }
