--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -459,30 +459,23 @@ $thead-font-size:          12px !default;
 
 // Text field
 
+$text-field-bg-dark:                     rgba(255, 255, 255, .1) !default;
+$text-field-bg-light:                    rgba(0, 0, 0, .06) !default;
 $text-field-border-color-dark:           rgba(255, 255, 255, .7) !default;
 $text-field-border-color-light:          rgba(0, 0, 0, .42) !default;
 $text-field-border-color-disabled-dark:  rgba(255, 255, 255, .5) !default;
 $text-field-border-color-disabled-light: rgba(0, 0, 0, .26) !default;
 $text-field-border-color-hover-dark:     rgba(255, 255, 255, 1) !default;
 $text-field-border-color-hover-light:    rgba(0, 0, 0, .87) !default;
-$text-field-border-width:                1px !default;
+$text-field-border-radius:               $border-radius !default;
+$text-field-border-width:                $border-width !default;
 $text-field-font-size:                   16px !default;
-$text-field-height:                      36px !default;
-$text-field-margin-y:                    $spacer-sm !default;
+$text-field-height:                      56px !default;
+$text-field-line-height:                 1.5 !default;
+$text-field-margin-y:                    $spacer-y-inline !default;
 $text-field-min-width:                   200px !default;
-$text-field-padding-x:                   0 !default;
-$text-field-padding-y:                   8px !default;
-
-
-
-// Text field box
-
-$text-field-box-bg-dark:       rgba(255, 255, 255, .1) !default;
-$text-field-box-bg-light:      rgba(0, 0, 0, .06) !default;
-$text-field-box-border-radius: 4px !default;
-$text-field-box-height:        56px !default;
-$text-field-box-padding-x:     16px !default;
-$text-field-box-padding-y:     20px !default;
+$text-field-padding-x:                   12px !default;
+$text-field-padding-y:                   (($text-field-height - $text-field-border-width * 2 - $text-field-font-size * $text-field-line-height) / 2) !default;
 
 
 
