Update vars for table

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -435,11 +435,12 @@ $table-bg-dark:            $dark-4 !default;
 $table-bg-light:           $light-4 !default;
 $table-bg-hover-dark:      $dark-2 !default;
 $table-bg-hover-light:     $light-2 !default;
-$table-border-width:       1px !default;
+$table-border-radius:      $border-radius !default;
+$table-border-width:       $border-width !default;
 $table-border-color-dark:  $white-divider !default;
 $table-border-color-light: $black-divider !default;
 $table-box-shadow:         $shadow-2dp !default;
-$table-margin-y:           $spacer !default;
+$table-margin-y:           $spacer-y !default;
 $tbody-cell-height:        48px !default;
 $tbody-cell-padding-x:     12px !default;
 $tbody-cell-padding-y:     12px !default;
