Admin interface bulk fixes

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -359,6 +359,7 @@ $menu-panel-padding-y:          20px !default;
 
 $admin-breakpoint:     700px !default;
 $admin-nav-max-height: 500px !default;
+$admin-nav-width:      20% !default;
 $topic-body-width:     712px !default;
 
 
