--- a/scss/common.scss
+++ b/scss/common.scss
@@ -45,6 +45,7 @@
 // - Other pages
 //   - About
 //   - Admin
+//   - Dashboard
 
 @import 'common/base';
 @import 'common/base-override';
@@ -84,3 +85,4 @@
 
 @import 'common/about';
 @import 'common/admin';
+@import 'common/dashboard';
