--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -90,6 +90,15 @@ dt {
   font-weight: bolder;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: $spacer-y-inline;
+}
+
 h1 {
   @include typography-h1;
 }
