Convert fa angle down to md keyboard arrow dow

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -10,6 +10,10 @@
   @include material-icons('arrow_drop_up');
 }
 
+.fa-angle-down {
+  @include material-icons('keyboard_arrow_down');
+}
+
 .fa-arrow-down {
   @include material-icons('arrow_downward');
 }
