Convert fa arrow left to md arrow back

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -26,6 +26,10 @@
   @include material-icons('swap_horiz');
 }
 
+.fa-arrow-left {
+  @include material-icons('arrow_back');
+}
+
 .fa-arrow-up {
   @include material-icons('arrow_upward');
 }
