Convert fa book to md book

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -67,6 +67,10 @@
   @include material-icons('format_bold');
 }
 
+.fa-book {
+  @include material-icons('book');
+}
+
 .fa-bookmark {
   @include material-icons('bookmark_border');
 }
