Convert fa pie chart to md pie chart

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -368,6 +368,10 @@
   @include material-icons('crop_original');
 }
 
+.fa-pie-chart {
+  @include material-icons('pie_chart');
+}
+
 .fa-play {
   @include material-icons('play_arrow');
 }
