--- a/scss/common.scss
+++ b/scss/common.scss
@@ -18,7 +18,7 @@
 //   - Auto complete
 //   - Colour picker
 //   - D editor
-//   - Select2
+//   - Select kit
 // - Header
 // - List control
 // - Login
@@ -60,7 +60,7 @@
 @import 'common/form-auto-complete';
 @import 'common/form-color-picker';
 @import 'common/form-d-editor';
-@import 'common/form-select2';
+@import 'common/form-select-kit';
 @import 'common/header';
 @import 'common/list-control';
 @import 'common/login';
