Convert fa signal to ma signal cellular alt

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -424,6 +424,10 @@
   @include material-icons('exit_to_app');
 }
 
+.fa-signal {
+  @include material-icons('signal_cellular_alt');
+}
+
 .fa-smile-o {
   @include material-icons('insert_emoticon');
 }
