Convert fa table to md table chart

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -440,6 +440,10 @@
   @include material-icons('brightness_5');
 }
 
+.fa-table {
+  @include material-icons('table_chart');
+}
+
 .fa-tag {
   @include material-icons('label');
 }
